# SwiftMacro

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mouse_lock.py  mouse_lock.pyw  pyproject.toml  requirements.txt  swiftmacro.py  swiftmacro.pyw
.github/workflows/: release.yml  tests.yml
docs/superpowers/plans/: 2026-03-28-mouse-lock-tool.md  2026-03-29-profile-system.md  2026-03-30-phase1-stabilization-rebranding.md  2026-03-30-phase2-new-steps-and-loop.md  2026-03-31-phase3-ui-ux-overhaul.md  2026-04-01-phase4-distribution.md  (+1 more)
examples/: demo_profiles.json
inno/: SwiftMacro.iss
mouse_lock/: __main__.py  action_runner.py  app.py  constants.py  dpi.py  hotkeys.py  icon.py  lock_loop.py  models.py  profile_store.py  single_instance.py  state.py  tray.py
mouse_lock/ui/: main_window.py  step_builder.py  theme.py
scripts/: build_exe.ps1  build_installer.ps1  release.ps1
swiftmacro/: __main__.py  action_runner.py  app.py  constants.py  cursor.py  hotkeys.py  icon.py  lock_loop.py  log.py  models.py  profile_manager.py  profile_store.py  shutdown.py  single_instance.py  state.py  tray.py  updater.py
swiftmacro/ui/: main_window.py  step_builder.py  theme.py
tests/: conftest.py  test_action_runner.py  test_app.py  test_app_state.py  test_concurrency.py  test_constants.py  test_cursor.py  test_dpi.py  test_hotkey_manager.py  test_hotkeys.py  test_icon.py  test_lock_loop.py  test_log.py  test_models.py  test_profile_manager.py  test_profile_store.py  test_shutdown.py  test_single_instance.py  test_state.py  test_ui.py  test_updater.py
(+13 files in other folders)
